--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,10 @@ jobs:
           KEY: ${{secrets.KEY_1}}
           SOURCE : ./WineMate/
           TARGET: ~/project/
+      
+      - uses: appleboy/ssh-action@master
+        with:
+         host: ${{ secrets.HOST_1 }}
+         username: ${{ secrets.USER_1 }}
+         key: ${{ secrets.KEY_1 }}         
+         script: python3 ./project/manage.py collectstatic
